test: add item service test